# Autoquad

./: README.md
catkin_ws/: .gitignore
catkin_ws/src/ardrone_video/: CMakeLists.txt  compile.sh  package.xml
catkin_ws/src/ardrone_video/data/: data.txt  get_video.py  initDemo.txt  test1.txt  test2.txt  test3.txt
catkin_ws/src/ardrone_video/launch/: ardrone.launch  ardrone_test.launch  ardrone_video.launch
catkin_ws/src/ardrone_video/msg/: Noisy.msg  Objective.msg
catkin_ws/src/ardrone_video/scripts/: calibration_server.py  install-everything.sh  install-kms.sh  install-node.sh  install-python.sh  setup-ros-webrtc.sh  start-kms.sh
catkin_ws/src/ardrone_video/site/: .gitignore  README.md  bower.json  gruntfile.js  run.sh
catkin_ws/src/ardrone_video/site/src/css/: style.css
catkin_ws/src/ardrone_video/site/src/html/: demo.html  index.html  mainPage.html  workingvideo.html
catkin_ws/src/ardrone_video/site/src/js/: demo.js  directionVector.js  draw.js  index.js  index2.js  ros_webrtc.js  video.js
catkin_ws/src/ardrone_video/src/: driver.py  noisy_coord_handler.py
catkin_ws/src/ardrone_video/srv/: Calibrate.srv
catkin_ws/src/ros_webrtc/launch/: ros_webrtc_img.launch
